gcc/testsuite/gcc.dg/noncompile/950825-1.c
int
main()
{
return (struct x) {{y: 0}};   /* { dg-error "extra|near|excess|incompatible|invalid" } */
}
